language/move-lang/tests/move_check/translated_ir_tests/commands/pop_negative.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/pop_negative.move:2:18 ───
   │
 7 │         (_, _, _, _) = three();
   │         ^^^^^^^^^^^^ Invalid list-assignment. The list-assignment expected 4 argument(s) but got 3
   ·
 2 │     fun three(): (u64, u64, u64) {
   │                  --------------- Found 3 arguments here
   │

